--- a/.github/workflows/jmeter-tests.yml
+++ b/.github/workflows/jmeter-tests.yml
@@ -1,39 +1,33 @@
-name: JMeter Tests
-
-on:
-  push:
-    branches:
-      - main  # Use 'main' ou 'master', conforme sua branch principal
-  pull_request:
+on: [push]
 
 jobs:
-  run-jmeter-tests:
+  jmeter_job:
     runs-on: ubuntu-latest
+    name: JMeter Test Execution
+    steps:      
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    steps:
-      - name: Check out the code
-        uses: actions/checkout@v2
+      - name: Create reports directory
+        run: mkdir -p reports/html  # Cria a pasta para os relatórios
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Run JMeter Tests
+        uses: adriandw/run-jmeter@v1  # Use a ação JMeter adequada
         with:
-          java-version: '11'
+          test-plan-path: ./TestPlans/S01_SimpleExample/S01_SimpleExample.jmx
+          args: "-e -o ./reports/html/"
+        continue-on-error: true  # Continua mesmo se o teste falhar
 
-      - name: Run JMeter tests
-        uses: jmeter-action/jmeter@v1  # Atualizar para uma ação de JMeter que funcione
+      - name: Upload Results
+        uses: actions/upload-artifact@v3
         with:
-          testfiles: "jmeter-scenarios/*.jmx"  # Apontando para a pasta onde seus cenários JMX estão
-          results_file: "results/result.jtl"    # Define o local dos resultados dos testes
+          name: jmeter-results
+          path: result.jtl
+          if-no-files-found: error
 
-      - name: Generate JMeter HTML Report
-        run: |
-          mkdir -p reports  # Cria a pasta 'reports' se não existir
-          for result in results/*.jtl; do
-            jmeter -g "$result" -o "./reports/$(basename "$result" .jtl)-report"
-          done
-
-      - name: Upload JMeter Reports
-        uses: actions/upload-artifact@v4
+      - name: Upload HTML Reports
+        uses: actions/upload-artifact@v3
         with:
           name: jmeter-reports
-          path: ./reports
+          path: reports
+          if-no-files-found: error
