--- a/.github/workflows/jmeter-tests.yml
+++ b/.github/workflows/jmeter-tests.yml
@@ -9,26 +9,26 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Create reports directory
-        run: mkdir -p reports/html  # Cria a pasta para os relatórios
+        run: mkdir -p reports/html reports/jtl  # Cria as pastas para os relatórios e resultados
 
       - name: Run JMeter Tests
         run: |
           for test_file in ./PerformanceDigital/**/*.jmx; do
             echo "Running JMeter test: $test_file"
-            jmeter -n -t "$test_file" -e -o ./reports/html/"$(basename "$test_file" .jmx)"  # Executa o teste JMeter e gera o relatório
+            jmeter -n -t "$test_file" -l ./reports/jtl/"$(basename "$test_file" .jmx)".jtl -e -o ./reports/html/"$(basename "$test_file" .jmx)"  # Executa o teste JMeter, gera o .jtl e o relatório
           done
         continue-on-error: true  # Continua mesmo se o teste falhar
 
-      - name: Upload Results
+      - name: Upload JTL Results
         uses: actions/upload-artifact@v3
         with:
           name: jmeter-results
-          path: reports/**/*.jtl  # Coleta todos os arquivos JTL gerados
+          path: reports/jtl/**/*.jtl  # Coleta todos os arquivos JTL gerados
           if-no-files-found: error
 
       - name: Upload HTML Reports
         uses: actions/upload-artifact@v3
         with:
           name: jmeter-reports
-          path: reports/html  # Ajuste conforme a estrutura do seu repositório
+          path: reports/html  # Coleta os relatórios em HTML
           if-no-files-found: error
