--- a/.github/workflows/jmeter-tests.yml
+++ b/.github/workflows/jmeter-tests.yml
@@ -9,6 +9,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      # Instalação do JMeter
+      - name: Install JMeter
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jmeter
+
       # Criação dos diretórios para os relatórios
       - name: Create reports directory
         run: mkdir -p PerformanceDigital/reports/jtl PerformanceDigital/reports/html  # Cria as pastas para os relatórios JTL e HTML
