--- a/.github/workflows/jmeter-tests.yml
+++ b/.github/workflows/jmeter-tests.yml
@@ -15,16 +15,12 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y jmeter
 
-      # Criação dos diretórios para os relatórios
-      - name: Create reports directory
-        run: mkdir -p PerformanceDigital/reports/jtl PerformanceDigital/reports/html  # Cria as pastas para os relatórios JTL e HTML
-
       # Execução dos testes JMeter
       - name: Run JMeter Tests
         run: |
           for test_file in ./PerformanceDigital/**/*.jmx; do
             echo "Running JMeter test: $test_file"
-            # Gera os arquivos .jtl e os relatórios HTML
+            # Gera os arquivos .jtl e os relatórios HTML automaticamente
             jmeter -n -t "$test_file" -l ./PerformanceDigital/reports/jtl/"$(basename "$test_file" .jmx)".jtl -e -o ./PerformanceDigital/reports/html/"$(basename "$test_file" .jmx)"
           done
 
