--- a/.github/workflows/jmeter-tests.yml
+++ b/.github/workflows/jmeter-tests.yml
@@ -29,7 +29,7 @@ jobs:
       continue-on-error: true  # Continua mesmo com falhas nos testes
 
     - name: Upload test results
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3  # Atualizado para a versão mais recente
       with:
         name: jmeter-results
         path: |
