--- a/.github/workflows/jmeter-tests.yml
+++ b/.github/workflows/jmeter-tests.yml
@@ -1,45 +1,38 @@
-name: Run JMeter Tests
+name: Test JMeter Action
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches: [main]
 
 jobs:
-  jmeter:
+  action_build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checar repositório
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - name: Instalar Java e pacotes necessários
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y openjdk-11-jdk ca-certificates-java
-
-      - name: Configurar JAVA_HOME
-        run: echo "JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))" >> $GITHUB_ENV
-
-      - name: Verificar Java
-        run: java -version
-
-      - name: Baixar e extrair JMeter
-        run: |
-          wget https://downloads.apache.org//jmeter/binaries/apache-jmeter-5.5.1.tgz
-          tar -xvzf apache-jmeter-5.5.1.tgz
-          export PATH=$PATH:$(pwd)/apache-jmeter-5.5.1/bin
-          echo "JMeter adicionado ao PATH."
-
-      - name: Executar cenários JMeter
-        run: |
-          # Execute seu arquivo .jmx aqui
-          # Substitua 'seuscenarios.jmx' pelo caminho correto do seu arquivo .jmx
-          jmeter -n -t seuscenarios.jmx -l resultados.jtl -j jmeter.log
-
-      - name: Criar relatório HTML
-        run: |
-          # Gera o relatório HTML com os resultados
-          jmeter -g resultados.jtl -o relatórios
-
-      - name: Fazer upload dos relatórios
-        uses: actions/upload-artifact@v3
+      - name: Run JMeter Action on a test
+        uses: rbhadti94/apache-jmeter-action@v0.5.0
         with:
-          name: jmeter-relatorios
-          path: relatórios/
+          testFilePath: tests/sample_test.jmx
+          outputReportsFolder: reports/
+          args: "--loglevel INFO"
+
+      - name: Run JMeter Action on other tests
+        uses: rbhadti94/apache-jmeter-action@v0.5.0
+        with:
+          testFilePath: other-tests/
+          outputReportsFolder: other_reports/
+          args: "--loglevel INFO"
+
+      - uses: actions/upload-artifact@v1
+        with:
+          name: jmeter-test-results
+          path: reports/
+
+      - uses: actions/upload-artifact@v1
+        with:
+          name: jmeter-test-results-other
+          path: other_reports/
