--- a/.github/workflows/jmeter-tests.yml
+++ b/.github/workflows/jmeter-tests.yml
@@ -1,53 +1,45 @@
 name: JMeter Tests
 
-# O pipeline será executado quando houver push na branch 'master'
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   jmeter:
     runs-on: ubuntu-latest
 
     steps:
-      # Faz o checkout do código
       - name: Check out code
         uses: actions/checkout@v3
 
-      # Configura o Java 11 (necessário para rodar o JMeter)
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
 
-      # Cria o diretório de relatórios para armazenar resultados
       - name: Create reports directory
         run: mkdir -p reports
 
-      # Baixa e adiciona o JMeter ao PATH
       - name: Download JMeter
         run: |
-          wget https://downloads.apache.org/jmeter/binaries/apache-jmeter-5.5.tgz
-          tar -xvzf apache-jmeter-5.5.tgz
-          export PATH=$PATH:$(pwd)/apache-jmeter-5.5/bin
+          wget https://downloads.apache.org/jmeter/binaries/apache-jmeter-5.5.1.tgz  # Atualizada para a versão 5.5.1
+          tar -xvzf apache-jmeter-5.5.1.tgz
+          export PATH=$PATH:$(pwd)/apache-jmeter-5.5.1/bin  # Ajuste para a versão correta
           echo "JMeter adicionado ao PATH."
 
-      # Executa os testes JMeter usando o plano de teste .jmx e gera relatórios em HTML
       - name: Run JMeter Tests
         uses: QAInsights/PerfAction@v5.6.2
         with:
           test-plan-path: ./TestPlans/seu_plano_de_teste.jmx
           args: "-e -o ./reports/html/"
 
-      # Copia os arquivos para a pasta de artefatos (mesmo comportamento do CopyFiles@2)
       - name: Copy files
         run: |
           mkdir -p ${{ github.workspace }}/artifact
           cp -R ${{ github.workspace }}/* ${{ github.workspace }}/artifact
 
-      # Publica os artefatos de saída do teste JMeter
       - name: Upload JMeter Results (JTL)
         uses: actions/upload-artifact@v3
         with:
@@ -56,7 +48,6 @@ jobs:
           if-no-files-found: warn
           include-hidden-files: false
 
-      # Publica os relatórios HTML do JMeter
       - name: Upload HTML Reports
         uses: actions/upload-artifact@v3
         with:
@@ -65,7 +56,6 @@ jobs:
           if-no-files-found: error
           include-hidden-files: false
 
-      # Publica os artefatos para outros usos, similar ao PublishBuildArtifacts@1
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v3
         with:
